# soloud

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Configure.cmake  GUIDELINES  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  issue_template.md  main.cpp  soloud.cpp  soloud.h  soloud_sdl.cpp  soloud_wav.cpp  soloud_wav.h
cmake/: FindSDL2.cmake  Install.cmake  InstallExport.cmake  PrintOptionStatus.cmake
contrib/: CMakeLists.txt  Configure.cmake  README.md  demos.cmake  gen_glue.cmake  src.cmake
contrib/cmake/: FindOpenSLES.cmake  FindPipeWire.cmake  FindSDL2.cmake  Install.cmake  InstallExport.cmake  OptionDependentOnPackage.cmake
core/: soloud.cpp  soloud.h  soloud_audiosource.cpp  soloud_audiosource.h  soloud_bus.cpp  soloud_bus.h  soloud_core_basicops.cpp  soloud_core_faderops.cpp  soloud_core_filterops.cpp  soloud_core_getters.cpp  soloud_core_setters.cpp  soloud_core_voiceops.cpp  soloud_fader.cpp  soloud_fader.h  soloud_fft.cpp  soloud_fft.h  soloud_filter.cpp  soloud_filter.h  soloud_thread.cpp  soloud_thread.h
demos/: CMakeLists.txt
doc/: SoLoud.tex  attributes.mmd  attributes.tex  audiosource.mmd  audiosource.tex  backends.mmd  backends.tex  basics.mmd  basics.tex  bassboostfilter.mmd  biquadfilter.mmd  biquadfilter.tex  bmx_api.mmd  c_api.mmd  codegen.mmd  collider.mmd  concepts.graphml  concepts.mmd  concepts.tex  concepts3d.mmd  core3d.mmd  coremisc.mmd  coremisc.tex  cs_api.mmd  d_api.mmd  dcremovalfilter.mmd  dirstruct.graphml  dirstruct.mmd  downloads.mmd  echofilter.mmd  echofilter.tex  epub.css  examples.mmd  faders.mmd  faders.tex  faq.mmd  faq.tex  fftfilter.mmd  fftfilter.tex  file.graphml  (+45 more)
docsrc/: SoLoud.tex  attenuator.mmd  attributes.mmd  audiosource.mmd  backends.mmd  basics.mmd  bassboostfilter.mmd  biquadfilter.mmd  bmx_api.mmd  c_api.mmd  codegen.graphml  concepts.mmd  concepts3d.mmd  console.mmd  cs_api.mmd  d_api.mmd  dcremovalfilter.mmd  dirstruct.graphml  dirstruct.mmd  downloads.mmd  echofilter.mmd  epub.css  faders.mmd  faq.mmd  fftfilter.mmd  file.mmd  intro.mmd  (+32 more)
src/: CMakeLists.txt
src/audiosource/ay/: chipplayer.cpp  chipplayer.h  readme.txt  sndbuffer.cpp  sndchip.cpp  sndchip.h  sndrender.cpp  sndrender.h  soloud_ay.cpp
src/audiosource/modplug/: soloud_modplug.cpp
src/audiosource/monotone/: soloud_monotone.cpp
src/audiosource/noise/: soloud_noise.cpp
src/audiosource/openmpt/: soloud_openmpt.cpp  soloud_openmpt_dll.c
src/audiosource/sfxr/: soloud_sfxr.cpp
src/audiosource/speech/: darray.cpp  klatt.cpp  klatt.h  soloud_speech.cpp  tts.cpp
src/audiosource/tedsid/: readme.txt  sid.cpp  sid.h  soloud_tedsid.cpp  ted.cpp
src/audiosource/vic/: soloud_vic.cpp
src/audiosource/vizsn/: soloud_vizsn.cpp
src/audiosource/wav/: dr_flac.h  dr_wav.h  soloud_wav.cpp  soloud_wavstream.cpp  stb_vorbis.c
src/backend/alsa/: soloud_alsa.cpp
src/backend/coreaudio/: soloud_coreaudio.cpp
src/backend/jack/: soloud_jack.cpp
src/backend/miniaudio/: soloud_miniaudio.cpp
src/backend/nosound/: soloud_nosound.cpp
src/backend/null/: soloud_null.cpp
src/backend/openal/: soloud_openal.cpp  soloud_openal_dll.c
src/backend/opensles/: soloud_opensles.cpp
src/backend/oss/: soloud_oss.cpp
src/backend/pipewire/: soloud_pipewire.cpp
src/backend/portaudio/: soloud_portaudio.cpp  soloud_portaudio_dll.c
src/backend/sdl/: soloud_sdl.cpp  soloud_sdl1.cpp  soloud_sdl1_dll.c  soloud_sdl2.cpp  soloud_sdl2_dll.c  soloud_sdl_dll.c
src/backend/sdl2_nondyn/: soloud_sdl2_nondyn.cpp
src/backend/sdl2_static/: soloud_sdl2_static.cpp
src/backend/sdl3_static/: soloud_sdl3_static.cpp
src/backend/sdl_nondyn/: soloud_sdl_nondyn.cpp
src/backend/sdl_static/: soloud_sdl_static.cpp
src/backend/vita/: soloud_vita.cpp
src/backend/vita_homebrew/: soloud_vita_homebrew.cpp
src/backend/wasapi/: soloud_wasapi.cpp
src/backend/winmm/: soloud_winmm.cpp
src/backend/xaudio2/: soloud_xaudio2.cpp
src/c_api/: soloud.def  soloud_c.cpp  soloud_c_openal.cpp  soloud_c_oss.cpp  soloud_c_portaudio.cpp  soloud_c_sdl.cpp  soloud_c_wasapi.cpp  soloud_c_winmm.cpp  soloud_c_xaudio2.cpp
src/core/: soloud.cpp  soloud_audiosource.cpp  soloud_bus.cpp  soloud_core_3d.cpp  soloud_core_basicops.cpp  soloud_core_faderops.cpp  soloud_core_filterops.cpp  soloud_core_getters.cpp  soloud_core_setters.cpp  soloud_core_voicegroup.cpp  soloud_core_voiceops.cpp  soloud_fader.cpp  soloud_fft.cpp  soloud_fft_lut.cpp  soloud_file.cpp  soloud_filter.cpp  soloud_misc.cpp  soloud_physfs.cpp  soloud_queue.cpp  soloud_thread.cpp
src/demos/piano/: main.cpp
src/filter/: soloud_bassboostfilter.cpp  soloud_biquadresonantfilter.cpp  soloud_dcremovalfilter.cpp  soloud_duckfilter.cpp  soloud_echofilter.cpp  soloud_eqfilter.cpp  soloud_fftfilter.cpp  soloud_flangerfilter.cpp  soloud_freeverbfilter.cpp  soloud_lofifilter.cpp  soloud_robotizefilter.cpp  soloud_waveshaperfilter.cpp
src/tools/ay2dump/: ar.h  ay2dump.cpp  chipplayer.cpp  chipplayer.h  chipsong.cpp  chipsong.h  ptxsong.cpp  sndrender.cpp  sndrender.h  sysdefs.h  unlzh.cpp  vtxsong.cpp  vtxsong.h  z80emul.h  zxssk.h
src/tools/ay2dump/z80/: OP_CB.CPP  OP_DDCB.CPP  OP_NOPREFIX.CPP  init.cpp
src/tools/ay2zak/: ay2zak.cpp  chipplayer.cpp  chipplayer.h  defs.h  errcode.h  pt3song.cpp  pt3song.h  ptxsong.h  sndbuffer.cpp  sndbuffer.h  sndchip.cpp  sndchip.h  sndrender.cpp  unlzh.h  z80emul.cpp  z80esong.cpp  z80esong.h
src/tools/ay2zak/z80/: OP_DD.CPP  OP_ED.CPP  OP_FD.CPP  TABLES.CPP  cmd.cpp  daa_tabs.cpp  defs.h  op_system.cpp
src/tools/codegen/: main.cpp
src/tools/lutgen/: main.cpp
src/tools/resamplerlab/: main.cpp
src/tools/sanity/: sanity.cpp
src/tools/tedsid2dump/: cbmtune.cpp  cbmtune.h  cpu.cpp  cpu.h  main.cpp  sid.cpp  tedmem.cpp  tedplay.cpp  tedplay.h  tedsound.cpp  types.h
src/tools/tedsid2zak/: cbmtune.cpp  cpu.cpp  cpu7501asm.h  mem.h  psid.h  roms.h  sid.cpp  sid.h  tedmem.cpp  tedmem.h  tedplay.cpp  tedsid2zak.cpp  tedsound.cpp
src/tools/ym2dump/: ym2dump.cpp
src/tools/ym2zak/: LZH.H  YmMusic.cpp  YmMusic.h  ym2zak.cpp
src/tools/zakopt/: optimize.c  zakopt.cpp  zx7.h  zx7compress.c
(+201 files in other folders)
